# code_snippets

./: README.md
bash/: bashrc  check_frp.sh  fozu.sh  gpu-pm  gpu.sh  hjx.sh  resouce_monitor.sh  switch-cuda.sh  test.sh  test_zip.sh  www_bashrc  zhangx.sh
crypt/select-coin-2__1/: README.md  backtest.py  config.py  param_search.py  test.py  update_min_qty.py  更新日志.md
crypt/select-coin-2__1/core/: __init__.py  equity.py  evaluate.py  figure.py  rebalance.py  simulator.py  version.py
crypt/select-coin-2__1/examples/: config_多空分离.py
crypt/select-coin-2__1/factors/: Bias.py  PctChange.py  PriceMean.py  QuoteVolumeMean.py  VWapBias.py
crypt/select-coin-2__1/program/: step1_prepare_data.py  step2_calculate_factors.py  (+2 more)
cxx/circular_buffer/: circular_buffer.h
cxx/common/: coroutine.cpp  test.cpp  test_1.cpp
cxx/dynodx/android_opencv/: .editorconfig  CMakeLists.txt  build.sh  run_test02.sh  xmake.lua
cxx/dynodx/android_opencv/src/: main.cpp  test.cpp  test.h  test_2.cpp
cxx/greatek/: xmake.lua
cxx/plugin/dll_test/: CMakeLists.txt
cxx/plugin/dll_test/lib/: CMakeLists.txt  metaObject.h  testlib.cpp
cxx/plugin/dll_test/src/: dlload.cpp  dlload.h  register.cpp  register.h  test.cpp
cxx/project/dih_500/libalg/: CMakeLists.txt  FocusControl.cpp  FocusControl.h  Makefile  Makefile_local  ai.cpp  ai.h  alg_clarity.cpp  alg_clarity.h  alg_error_code.h  alg_heamo.cpp  alg_heamo.h  alg_heamo_human.cpp  alg_heamo_human_model_call.cpp  alg_heamo_milk.cpp  alg_heamo_milk_model_call.cpp  alg_task_flow_queue.cpp  alg_task_flow_queue.h  event.h  imgprocess.cpp  imgprocess.h  libalgcell.cpp  libalgcell.h  libalgimm.cpp  libalgimm.h  neural_network.cpp  neural_network.h  project_utils.cpp  project_utils.h  timecnt.cpp  timecnt.h  utils.cpp  utils.h
cxx/project/dih_500/libalg/include/: DihLogPlog.h  algLog.h  immune.h  replace_std_string.h
cxx/project/dih_500/libalg/include/libopencl-stub/include/CL/: cl_version.h
cxx/project/dih_500/libalg/include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp
cxx/project/dih_500/libalg/include/nlohmann/detail/input/: binary_reader.hpp  lexer.hpp
cxx/project/dih_500/libalg/include/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
cxx/project/dih_500/libalg/make_result/: AlarmManager.cpp  AlarmManager.h  Calibration.cpp  Calibration.h  NormalFitting.cpp  NormalNetwork.cpp  ParamFitting.cpp  ParamFitting.h  SphericalFitting.cpp  SphericalNetwork.cpp  TinnyNetwork.cpp  TinnyNetwork.h
cxx/project/dih_500/libalg/model_config/: ModelConfig.cpp  ModelConfig.h
cxx/project/dih_500/libalg/opencl_tools/: Makefile  NmsCl.cpp  NmsCl.h
cxx/project/immune/: 1.card  1.card.back  1.txt  1.txt.back  CMakeLists.txt  README.md  alg.lua  immune_demo  run.sh
cxx/project/immune/cJSON/: .gitignore  LICENSE  README.md  README_ZH.md  SConscript  cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h  cJSON_port.c  cJSON_util.h
cxx/project/immune/lua-5.3.4/: SConscript  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcode.h  lcorolib.c  lctype.c  lctype.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lprefix.h  lstate.c  (+21 more)
cxx/project/immune/lua-cjson-2.1.0/: CMakeLists.txt  LICENSE  Makefile  NEWS  THANKS  dtoa.c  dtoa_config.h  fpconv.c  fpconv.h  g_fmt.c  lua-cjson-2.1.0-1.rockspec  lua-cjson.spec  lua_cjson.c  manual.html  manual.txt  performance.html  performance.txt  rfc4627.txt  runtests.sh  strbuf.c  strbuf.h
cxx/project/immune/lua-cjson-2.1.0/lua/: json2lua.lua  lua2json.lua
cxx/project/immune/lua-cjson-2.1.0/lua/cjson/: util.lua
cxx/project/immune/lua-cjson-2.1.0/tests/: README  bench.lua  example1.json  example2.json  example3.json  example4.json  example5.json  genutf8.pl  numbers.json  rfc-example1.json  rfc-example2.json  test.lua  types.json
cxx/project/immune/other/: libalgimm.cpp  libalgimm.h
cxx/project/immune/process/: CMakeLists.txt  main.cpp
cxx/project/immune/src/: CMakeLists.txt  alg.cpp  alg.h  algcommon.h  algjson.cpp  algjson.h  algpeak.cpp  algpeak.h  crc16.c  crc16.h  immune.cpp  lua_port.c  lua_port.h  qr_json.cpp  qr_json.h
cxx/project/immune/src/include/: immune.h
cxx/protobuf/: addressbook.pb.cc
cxx/sanitizer_address/: xmake.lua
cxx/trt/: crnn_inference.cpp  crnn_inference.h  msae_inference.h  trt_inference.h  trt_logging.h
cxx/xsimd/: xmake.lua
java/test01/: com_image_ImageProcessor.h
llm/chandra_ocr/: local.env  test.md
llm/ollama_test/: 00ollama_test.py  01-2LLM_use_tools.py  02function_calling.py  03mcp_server.py
lua/lua_test/: hello.lua  main.cpp  xmake.lua
lua/pybind/: xmake.lua
lua/xmake/: env.lua  xmake.lua  xmake_2.lua  xmake_3.lua  xmake_asan.lua
python/b19/: 1.py  AUGMENT.py  CalB501Area.py  INK.py  P_R.py  aixin.py  cut_img.py  detP510.py  label_num.py  test.py  updata_xml.py  voc2yolo.py
python/b19rpa/: export_onnx.py  imag_aug.py  train_template.py  val_template.py
python/b7/: crop_negative_yolo_new.py  custom_decect_2.py  custom_gen_excle_result.py
python/b9/: real_vs_predict.py  test.py  val.py
python/chandra_ocr/: INSTALL_NOTES.md  environment.yml  requirements.txt  test01.py  test02.py
python/common_algo/: setup.py
python/cv_inference_framework/: test.py
python/deim/: 04deim.py  deim_onnx.py
python/dih_500_qt/: README.md  filesystem.db  main.py  pack.py
python/echint_algo/: setup.py
python/ocr/: test.py
python/ollama_test/: 01-1LLM_use_tools.py  03mcp_client.py
python/test/: albu.py  coco2labelme.py  cvtcolor.py  fix_json.py  hf_new_img.py  hf_rename.py  imgaug_test.py  inter_json.py  lab.py  main.py  move_file.py  multi_video_slice.py  ocr_test.py  onnx_fix.py  random_crop.py  test.py
python/transformer/: readme.md
python/tvdl/: .gitignore  README.md  requirements.txt  setup.py
python/tvlab/: .gitignore  README.md  requirements.txt  setup.py
python/zmq/: zmq_1.py  zmq_2.py  zmq_3.py  zmq_4.py
(+1188 files in other folders)
